--- a/client/src/Components/css_utils.scss
+++ b/client/src/Components/css_utils.scss
@@ -1,7 +1,17 @@
 
+$accent1: #02fb55d7;
+$accent2: #0E89B2;
+$accent3: #0548AD;
+$accent4: #0F458C;
+$accent5: #213D72;
+
 *{
     margin: 0;
     padding: 0;
+}
+
+body{
+    background-color: #2e2e2e;
 }
 
 a{
