changed scss for products page

--- a/client/src/Components/css_utils.scss
+++ b/client/src/Components/css_utils.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Alata&display=swap');
 
 $accent1: #02fb55d7;
 $accent2: #0E89B2;
@@ -11,6 +12,7 @@ $accent5: #213D72;
 }
 
 body{
+    font-family: 'Alata', sans-serif;
     background-color: #2e2e2e;
 }
 
