--- a/client/src/pages/Products/Products.scss
+++ b/client/src/pages/Products/Products.scss
@@ -4,50 +4,58 @@ li{
     list-style-type: none;
 }
 
+img{
+    width: 9em;
+    height: 9em;
+    object-fit: cover;
+    border-radius: 3%;
+}
+
 #Products{
+    word-wrap: break-word;
     .prods{
-        // position: relative;
         text-align: center;
-        color: $accent2;
-        word-break: break-word;
         display: grid;
         grid-template-columns: 1fr 1fr;
         justify-items: center;
-        object-fit: contain;
         &-block{
-            width: 10em;
-            // box-shadow: 0px 0px 21px 6px rgba(0,0,0,0.5);;
-            border-radius: 3%;
+            font-size: 1.1em;
+            vertical-align: center;
+            color: $accent2;
+            width: 11em;
+            padding: 1em 0;
             margin: 1em 0;
-            padding: 1em;
-            padding: 10px;
-            transition: 1s ease all;
-            &-imgContainer{
-                &-img{
-                    width: 9em;
-                    height: 9em;
-                    object-fit: cover;
-                    border-radius: 3%;
+            box-shadow: 0 0 5px 1px black;
+        }
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    #Products{
+        .prods{
+            animation-name: rollIn;
+            animation-duration: 1s ease;
+            grid-template-columns: 1fr 1fr 1fr;
+            &-block{
+                padding-bottom: 1em;
+                &-name{
+                    font-size: 1.1em;
+                    height: 2.5em;
                 }
             }
         }
     }
 }
 
-@media screen and (min-width: 600px){
-    #Products{
-        grid-template-columns: 1fr 1fr 1fr;
-        .prods{
-            &-block{
-                font-size: 1.3em;
-                width: 14em;
-                &-imgContainer{
-                    &-img{
-                        width: 14em;
-                        height: 14em; 
-                    }
-                }
-            }
-        }
+@keyframes rollIn {
+    0%{
+        position: absolute;
+        right: -20;
+        background-color: red;
+    }
+    100%{
+        position: relative;
+        right: 100;
+        background-color: blue;
     }
 }
