fixed images issue

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -176,7 +176,7 @@
         #hoverBoard{
             background-image: none;
             &-Img{
-                background-image: url('http://difundir.org/wp-content/uploads/2014/11/The-Real-Life-Hoverboard.jpg');
+                background-image: url('./images/realHover.jpg');
             }
         }
 
